# Conflicts: #	src/main/java/com/example/demo/Controller/CategoryController.java #	src/main/java/com/example/demo/Entity/CategoryEntity.java #	src/main/java/com/example/demo/Service/CategoryService.java #	src/main/java/com/example/demo/Service/Impl/CategoryServiceImpl.java #	src/test/java/com/example/demo/Controller/CategoryControllerTest.java #	src/test/java/com/example/demo/Repository/CategoryRepositoryTest.java #	src/test/java/com/example/demo/Service/CategoryServiceTest.java